--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,61 @@
     transform: rotate(360deg);
   }
 }
+
+#main {
+  width: max-content;
+  margin: 40px auto;
+  font-family: "Segoe UI", sans-serif;
+  padding: 25px 28px;
+  background: lightyellow;
+  border-radius: 4px;
+  border: 1px solid #302d2d;
+  animation: popup 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+}
+
+.input-parent {
+  display: block;
+  margin-bottom: 20px;
+}
+label {
+  display: block;
+  font-size: 16px;
+  margin-bottom: 8px;
+  color: black;
+}
+.input-parent input {
+  padding: 10px 8px;
+  width: 100%;
+  font-size: 16px;
+  background: lightblue;
+  border: none;
+  color: black;
+  border-radius: 4px;
+  outline: none;
+  transition: all 0.2s ease;
+}
+.input-parent input:hover {
+  background: paleturquoise;
+}
+.input-parent input:focus {
+  box-shadow: 0px 0px 0px 1px rgb(71, 71, 175);
+}
+button {
+  padding: 10px 18px;
+  font-size: 15px;
+  background: #1a3969;
+  width: 50%;
+  border: none;
+  border-radius: 4px;
+  color: #f4f4f4;
+  transition: all 0.2s ease;
+}
+button:hover {
+  opacity: 0.9;
+}
+button:focus {
+  box-shadow: 0px 0px 0px 3px black;
+}
+body {
+  background: skyblue;
+}
