--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,21 +17,14 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
 
 #main {
   width: max-content;
   margin: 40px auto;
   font-family: "Segoe UI", sans-serif;
   padding: 25px 28px;
-  background: lightyellow;
+  background-image: linear-gradient(#fa7cbb, #f14658);
   border-radius: 4px;
   border: 1px solid #302d2d;
   animation: popup 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
@@ -62,23 +44,19 @@ label {
   padding: 10px 8px;
   width: 100%;
   font-size: 16px;
-  background: lightblue;
+  background: white;
   border: none;
   color: black;
   border-radius: 4px;
   outline: none;
   transition: all 0.2s ease;
 }
-.input-parent input:hover {
-  background: paleturquoise;
-}
-.input-parent input:focus {
-  box-shadow: 0px 0px 0px 1px rgb(71, 71, 175);
-}
+
+
 button {
   padding: 10px 18px;
   font-size: 15px;
-  background: #1a3969;
+  background: rgb(72, 16, 124);
   width: 50%;
   border: none;
   border-radius: 4px;
@@ -92,5 +70,19 @@ button:focus {
   box-shadow: 0px 0px 0px 3px black;
 }
 body {
-  background: skyblue;
+  background-image: linear-gradient( #cb5eee, #4be1ec);
+  height: 800px;
+}
+
+/* .weatherDetails{
+  display: flex;
+  flex-wrap: wrap;
+  background-image: linear-gradient( #cb5eee, #4be1ec);
+
+} */
+
+
+
+.landingpage{
+  margin: 50px;
 }
